create sqlite student table + add user login / create account functionality

--- a/uopsb-app/package.json
+++ b/uopsb-app/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
+    "better-sqlite3": "^9.2.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.309.0",
     "next": "^14.0.4",
     "react": "^18.2.0",
@@ -20,6 +22,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.8",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
