--- a/uopsb-app/package.json
+++ b/uopsb-app/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
     "better-sqlite3": "^9.2.2",
+    "chart.js": "^4.4.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "formik": "^2.4.5",
@@ -18,6 +19,7 @@
     "lucide-react": "^0.309.0",
     "next": "^14.0.4",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7"
