--- a/uopsb-app/package.json
+++ b/uopsb-app/package.json
@@ -17,6 +17,7 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.309.0",
     "next": "^14.0.4",
+    "pg": "^8.11.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^2.2.0",
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.8",
     "@types/node": "^20",
+    "@types/pg": "^8.11.2",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
