pipeline add npm install working directory #85

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,6 +19,7 @@ steps:
     npm install
     npm run build
   displayName: 'npm install and build'
+  workingDirectory: 'uopsb-app'
 
 - script: |
     sudo apt-get update
