--- a/uopsb-app/package.json
+++ b/uopsb-app/package.json
@@ -12,6 +12,7 @@
     "@react-oauth/google": "^0.12.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "dayjs": "^1.11.10",
     "formik": "^2.4.5",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.309.0",
