--- a/uopsb-app/package.json
+++ b/uopsb-app/package.json
@@ -26,6 +26,8 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.24.1",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/pg": "^8.11.2",
     "@types/react": "^18",
@@ -35,6 +37,7 @@
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
+    "ts-jest": "^29.1.2",
     "typescript": "^5"
   }
 }
