--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,7 +18,8 @@ steps:
 - script: |
     npm install
     npm run build
-  displayName: 'npm install and build'
+    jest test.ts
+  displayName: 'npm install, build, and test'
   workingDirectory: 'uopsb-app'
 
 # - script: |
