--- a/uopsb-app/package.json
+++ b/uopsb-app/package.json
@@ -17,6 +17,7 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.309.0",
     "next": "^14.0.4",
+    "nodemailer": "^6.9.13",
     "pg": "^8.11.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -29,6 +30,7 @@
     "@babel/preset-typescript": "^7.24.1",
     "@types/jest": "^29.5.12",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.14",
     "@types/pg": "^8.11.2",
     "@types/react": "^18",
     "@types/react-dom": "^18",
